--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.482.0",
-    "next": "^15.3.0-canary.11",
+    "next": "^15.3.0-canary.13",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-virtuoso": "^4.12.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "typescript": "^5.8.2",
+    "@types/node": "^20.17.24",
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4",
+    "@tailwindcss/postcss": "^4.0.14",
+    "tailwindcss": "^4.0.14",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3.3.0"
   }
 }
