--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "idb-keyval": "^6.2.1",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.482.0",
-    "next": "^15.3.0-canary.31",
+    "next": "^15.4.0-canary.61",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-virtuoso": "^4.12.6",
-    "tailwind-merge": "^3.1.0",
+    "react-virtuoso": "^4.12.8",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.8.2",
-    "@types/node": "^20.17.30",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "@tailwindcss/postcss": "^4.1.1",
-    "tailwindcss": "^4.1.1",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.2",
+    "typescript": "^5.8.3",
+    "@types/node": "^20.17.57",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@tailwindcss/postcss": "^4.1.8",
+    "tailwindcss": "^4.1.8",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
     "@eslint/eslintrc": "^3.3.1"
   }
 }
