--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.482.0",
-    "next": "^15.5.1-canary.24",
+    "next": "^15.6.0-canary.41",
     "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-virtuoso": "^4.14.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-virtuoso": "^4.14.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "@types/node": "^20.19.12",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@tailwindcss/postcss": "^4.1.12",
-    "tailwindcss": "^4.1.12",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "15.3.3",
+    "typescript": "^5.9.3",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "tailwindcss": "^4.1.14",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
     "@eslint/eslintrc": "^3.3.1"
   }
 }
