--- a/package.json
+++ b/package.json
@@ -9,33 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
+    "babel-plugin-react-compiler": "^1.0.0",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.482.0",
-    "next": "^16.0.0-canary.15",
+    "next": "^16.1.0-canary.9",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-virtuoso": "^4.14.1",
-    "tailwind-merge": "^3.3.1",
+    "react-virtuoso": "^4.16.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
-    "@types/node": "^24.8.0",
+    "@types/node": "^24.10.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "@tailwindcss/postcss": "^4.1.14",
-    "tailwindcss": "^4.1.14",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "16.0.0-beta.0",
-    "@eslint/eslintrc": "^3.3.1"
+    "@tailwindcss/postcss": "^4.1.17",
+    "tailwindcss": "^4.1.17",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.6",
+    "@eslint/eslintrc": "^3.3.3"
   },
   "overrides": {
     "@types/react": "19.2.2",
