--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.482.0",
-    "next": "^16.1.0-canary.29",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-virtuoso": "^4.17.0",
+    "react-virtuoso": "^4.18.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
-    "@types/node": "^24.10.4",
+    "@types/node": "^24.10.7",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@tailwindcss/postcss": "^4.1.18",
     "tailwindcss": "^4.1.18",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
+    "eslint-config-next": "^16.1.1",
     "@eslint/eslintrc": "^3.3.3"
   },
   "overrides": {
